# motioncli

./: .gitignore  CMakeLists.txt  README.md
installer/: build-installer.bat  installer.nsi
src/app/: app.cpp  app.h
src/core/: autostart.cpp  config.cpp  config.h  library.cpp  library.h  moewalls.cpp  monitors.cpp  steam.cpp  wallpaper.cpp
src/net/: http.cpp  http.h
src/tui/: image.cpp  image.h  menu.cpp  terminal.cpp  terminal.h
src/util/: json.cpp  json.h  str.cpp  str.h
winget/: tenzo.motioncli.installer.yaml  tenzo.motioncli.locale.en-US.yaml  tenzo.motioncli.yaml
